Editted val function in starter notebook, wrote eval function in FCN model, and wrote pixel acc

--- a/PA3/starter.ipynb
+++ b/PA3/starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-2492bc9b7142>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-2492bc9b7142>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\u001b[0m\n\u001b[0m                                                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def init_weights(m):\n",
     "    if isinstance(m, nn.Conv2d) or isinstance(m, nn.ConvTranspose2d):\n",
@@ -61,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-a7754938bb29>, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-a7754938bb29>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    inputs = # Move your inputs onto the gpu\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "use_gpu = torch.cuda.is_available()\n",
     "if use_gpu:\n",
@@ -97,9 +115,20 @@
     "\n",
     "\n",
     "def val(epoch):\n",
-    "    fcn_model.eval()\n",
-    "    #Complete this function - Calculate loss, accuracy and IoU for every epoch\n",
+    "    # Complete this function - Calculate loss, accuracy and IoU for every epoch\n",
     "    # Make sure to include a softmax after the output from your model\n",
+    "    p_acc = 0\n",
+    "    iou_acc = 0\n",
+    "    count = 0\n",
+    "    for iter, (X, tar, Y) in enumerate(val_loader):\n",
+    "        p, iou = fcn_model.eval(X, tar)\n",
+    "        p_acc += p\n",
+    "        iou_acc += iou\n",
+    "        count += 1\n",
+    "    print(\"Epoch {}: Pixel Acc: {}, IOU Acc: {}\".format(epoch, p_acc/count, iou_acc/count))\n",
+    "    return p_acc/count, iou_acc/count\n",
+    "        \n",
+    "    \n",
     "    \n",
     "def test():\n",
     "    #Complete this function - Calculate accuracy and IoU \n",
@@ -109,6 +138,13 @@
     "    val(0)  # show the accuracy before training\n",
     "    train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -127,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
