--- a/PA3/starter.ipynb
+++ b/PA3/starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-2492bc9b7142>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-16-2492bc9b7142>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-2492bc9b7142>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\u001b[0m\n\u001b[0m                                                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-2492bc9b7142>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\u001b[0m\n\u001b[0m                                                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -66,27 +66,6 @@
     "fcn_model.apply(init_weights)\n",
     "#fcn_model = torch.load('best_model')\n",
     "optimizer = optim.Adam(fcn_model.parameters(), lr=5e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataLoader' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-8e9f1ae65729>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_loader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataLoader' object has no attribute 'shape'"
-     ]
-    }
-   ],
-   "source": [
-    "print(test_loader.shape)"
    ]
   },
   {
@@ -115,10 +94,10 @@
     "            optimizer.zero_grad()\n",
     "\n",
     "            if use_gpu:\n",
-    "                inputs = # Move your inputs onto the gpu\n",
-    "                labels = # Move your labels onto the gpu\n",
+    "                inputs = X.cuda()\n",
+    "                labels = tar.cuda()\n",
     "            else:\n",
-    "                inputs, labels = # Unpack variables into inputs and labels\n",
+    "                inputs, labels = X.cpu(), tar.cpu()\n",
     "\n",
     "            outputs = fcn_model(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
