--- a/PA3/starter.ipynb
+++ b/PA3/starter.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (basic_fcn.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3326\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-9ab4ecef50b4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from basic_fcn import *\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/cgrandhi/CSE253_Neural_Networks/PA3/basic_fcn.py\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    self.conv1   = nn.Conv2d(3, 32, kernel_size=3, stride=2, padding=1, dilation=1),\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
+    }
+   ],
    "source": [
     "from torchvision import utils\n",
     "from basic_fcn import *\n",
@@ -19,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-2492bc9b7142>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-22-2492bc9b7142>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-2492bc9b7142>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\u001b[0m\n\u001b[0m                                                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-2492bc9b7142>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    criterion = # Choose an appropriate loss function from https://pytorch.org/docs/stable/_modules/torch/nn/modules/loss.html\u001b[0m\n\u001b[0m                                                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
